<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/holo_orange_light">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/choose_photo_button"
        style="@style/choose_photo_button_style"
        android:layout_marginTop="32dp"
        android:text="@string/choose_photo_button"
        app:layout_constraintEnd_toEndOf="@id/password_edit_register"
        app:layout_constraintStart_toStartOf="@id/password_edit_register"
        app:layout_constraintBottom_toTopOf="@id/username_edit_register"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/username_edit_register"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:hint="@string/username_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_photo_button"
        style="@style/edit_text_login_register"/>

    <EditText
        android:id="@+id/email_edit_register"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_edit_register"
        style="@style/edit_text_login_register"/>

    <EditText
        android:id="@+id/password_edit_register"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_edit_register"
        style="@style/edit_text_login_register"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        style="@style/registration_login_button_style"
        android:layout_marginTop="16dp"
        android:text="@string/register_button"
        app:layout_constraintEnd_toEndOf="@id/password_edit_register"
        app:layout_constraintStart_toStartOf="@id/password_edit_register"
        app:layout_constraintTop_toBottomOf="@id/password_edit_register" />

    <TextView
        android:id="@+id/auth_type_change"
        style="@style/text_view_change_auth_type"
        android:text="@string/auth_type_change_string_register"
        app:layout_constraintStart_toStartOf="@id/register_button"
        app:layout_constraintEnd_toEndOf="@id/register_button"
        app:layout_constraintTop_toBottomOf="@id/register_button" />

</androidx.constraintlayout.widget.ConstraintLayout>