<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/holo_orange_light">

    <EditText
        android:id="@+id/email_edit_login"
        style="@style/edit_text_login_register"
        android:layout_marginTop="64dp"
        android:autofillHints=""
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_edit_login"
        style="@style/edit_text_login_register"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_edit_login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        style="@style/registration_login_button_style"
        android:layout_marginTop="16dp"
        android:text="@string/login_button"
        app:layout_constraintEnd_toEndOf="@id/password_edit_login"
        app:layout_constraintStart_toStartOf="@id/password_edit_login"
        app:layout_constraintTop_toBottomOf="@id/password_edit_login" />

    <TextView
        android:id="@+id/auth_type_change"
        style="@style/text_view_change_auth_type"
        android:text="@string/auth_type_change_string_login"
        app:layout_constraintStart_toStartOf="@id/login_button"
        app:layout_constraintEnd_toEndOf="@id/login_button"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>