<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/teal_700"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/username_edit_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_edit_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/username_edit_register"
        app:layout_constraintStart_toStartOf="@id/username_edit_register"
        app:layout_constraintTop_toBottomOf="@id/username_edit_register" />

    <EditText
        android:id="@+id/password_edit_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/username_edit_register"
        app:layout_constraintStart_toStartOf="@id/username_edit_register"
        app:layout_constraintTop_toBottomOf="@id/email_edit_register" />

    <Button
        android:id="@+id/register_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/register_button"
        app:layout_constraintEnd_toEndOf="@id/password_edit_register"
        app:layout_constraintStart_toStartOf="@id/password_edit_register"
        app:layout_constraintTop_toBottomOf="@id/password_edit_register" />

    <TextView
        android:id="@+id/auth_type_change"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/auth_type_change_string"
        app:layout_constraintStart_toStartOf="@id/register_button"
        app:layout_constraintEnd_toEndOf="@id/register_button"
        app:layout_constraintTop_toBottomOf="@id/register_button"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>